# schraper

./: Cargo.toml
.sqlx/: query-0c6131bb5e8c2d4899ca8d732e93a8c2d54cc90e8280505b977a244497370489.json  query-1cba3a8ae6c3c6617e14307887c9ad6d2af521cbb60fde52331c2d5b1ce9ce33.json  query-20dce6d9e6ffa8c5b83462951e60c712b92fe73b3295b2471607035fcbdc0413.json  query-2ad5966fdfcc59b4062eb867ae7b84948df51e18c9d6ac60c5181e233ad918fa.json  query-3878e758380327befb18ed3a7f1f04a482648e0a7bc1021c1a83b69edeaa822e.json  query-3c711efb7e462a3b5e696a227edf51d3ad3e5e8e1dfd6c82d243634e706d2f85.json  query-63f92fba68aaf0eec73ef9b004e5eff4d3497e742679bcae5fa2f99b5324e0c9.json  query-675d799498560a2bce25f735b9f0b74c4268a4c9ae8e1a7a84111c53e6aa1432.json  query-7436aa022c5c5356303c56e6913cfbe7b73b2532cdefe3bec741f254854d21be.json  query-cf2ebde618c6dd0a555912b6ebe79b83c0a8e6e144461f0d714f51291da1652a.json  query-cf6ed03fa6d1d229f631344317369b8abe7ef393b7a3c92dec7a842cda950429.json  query-f7ceebeecd4a6f4b5c7c0ddfc653dc00832d12b9006f677931070d30f3c7f7d9.json
migrations/: 01_pathe_tables.sql  02_log_table.sql
src/job/: beers.rs  matching.rs  mod.rs  movies.rs  util.rs  whiskies.rs
