[package]
name = "schraper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
governor = "0.10.0"
itertools = "0.14.0"
reqwest = { version = "0.12.17", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx-batch = "0.1.1"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "uuid"
] }
dotenvy = "0.15.7"

[[bin]]
name = "schraper"
path = "src/bin/main.rs"