[package]
name = "schraper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
governor = "0.10.0"
itertools = "0.14.0"
reqwest = { version = "0.12.17", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx-batch = { git = "https://github.com/chrismostert/sqlx-batch.git", branch="more_types" }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "uuid"
] }
dotenvy = "0.15.7"
chrono = "0.4.41"
strsim = "0.11.1"

[[bin]]
name = "schraper"
path = "src/bin/main.rs"
